--- a/docs/content/p0.md
+++ b/docs/content/p0.md
@@ -1,4 +1,4 @@
-# **1. Definición y Tipos de Bases de Datos**
+# Definición y Tipos de Bases de Datos
 
 ### **Definición de Bases de Datos**
 Una **base de datos** es una colección organizada de datos, diseñada para almacenar, gestionar y recuperar información de manera eficiente. En esencia, es un sistema que permite estructurar datos de forma que puedan ser consultados, actualizados y gestionados fácilmente, ya sea por usuarios o aplicaciones. Las bases de datos son fundamentales en cualquier sistema que requiera persistencia de datos, como aplicaciones web, sistemas empresariales, análisis de datos, entre otros.
@@ -66,7 +66,7 @@ Las bases de datos se clasifican según el modelo de datos que utilizan para org
 
 ---
 
-### **2. Historia y Evolución de los SGBD**
+### Historia y Evolución de los SGBD
 
 ### **Orígenes de los SGBD**
 Los **Sistemas Gestores de Bases de Datos (SGBD)** son programas que facilitan la creación, gestión y consulta de bases de datos. Su evolución está ligada al desarrollo de la informática y la necesidad de manejar datos de forma eficiente.
@@ -108,7 +108,7 @@ Los **Sistemas Gestores de Bases de Datos (SGBD)** son programas que facilitan l
 
 ---
 
-### **3. Introducción a los Conceptos: Tablas, Filas, Columnas, Claves**
+### Introducción a los Conceptos: Tablas, Filas, Columnas, Claves
 
 Los conceptos fundamentales de las bases de datos relacionales son esenciales para entender cómo se estructuran y gestionan los datos. A continuación, se explican en detalle:
 
@@ -160,7 +160,7 @@ Imagina una base de datos para una tienda:
 
 ---
 
-### **4. Herramientas: MySQL, PostgreSQL, SQLite (Instalación y Configuración)**
+### Herramientas: MySQL, PostgreSQL, SQLite (Instalación y Configuración)
 
 Los **Sistemas Gestores de Bases de Datos (SGBD)** son el software que permite crear, gestionar y consultar bases de datos. A continuación, se describen tres SGBD relacionales populares, sus características, y cómo instalarlos y configurarlos.
 
