docs: add p5.md for final activity on relationships and JOINs in SQL

--- a/docs/content/p4.md
+++ b/docs/content/p4.md
@@ -13,12 +13,14 @@ Las bases de datos relacionales organizan los datos en tablas, y las **relacione
 Una relación **1:1** implica que un registro en una tabla está asociado con **exactamente un registro** en otra tabla, y viceversa. Este tipo de relación es menos común, pero se utiliza cuando los datos de una entidad se dividen en dos tablas por razones de diseño, como mejorar la normalización o separar información sensible.
 
 **Características:**
+
 - Cada registro en la tabla A tiene un solo registro correspondiente en la tabla B.
 - Cada registro en la tabla B tiene un solo registro correspondiente en la tabla A.
 - La clave primaria de una tabla se usa como clave foránea en la otra, o viceversa.
 
 **Ejemplo:**
 Supongamos que tenemos una base de datos de empleados, donde cada empleado tiene un solo perfil de usuario. Dividimos la información en dos tablas:
+
 - **Tabla `empleados`**: Almacena datos generales (ID_Empleado, Nombre, Apellido).
 - **Tabla `perfiles_usuario`**: Almacena datos de acceso (ID_Perfil, ID_Empleado, Nombre_Usuario, Contraseña).
 
@@ -49,12 +51,14 @@ En este caso, `ID_Empleado` en `perfiles_usuario` es una clave foránea que aseg
 Una relación **1:N** significa que un registro en una tabla (la tabla "uno") puede estar asociado con **múltiples registros** en otra tabla (la tabla "muchos"), pero cada registro en la tabla "muchos" está asociado con **un solo registro** en la tabla "uno". Es el tipo de relación más común en bases de datos relacionales.
 
 **Características:**
+
 - Un registro en la tabla A puede tener cero o más registros relacionados en la tabla B.
 - Un registro en la tabla B está asociado con exactamente un registro en la tabla A.
 - La clave primaria de la tabla A se usa como clave foránea en la tabla B.
 
 **Ejemplo:**
 Una empresa tiene departamentos y empleados, donde un departamento puede tener muchos empleados, pero cada empleado pertenece a un solo departamento.
+
 - **Tabla `departamentos`**: Almacena información de departamentos (ID_Departamento, Nombre_Departamento).
 - **Tabla `empleados`**: Almacena información de empleados (ID_Empleado, Nombre, ID_Departamento).
 
@@ -75,6 +79,7 @@ CREATE TABLE empleados (
 Aquí, `ID_Departamento` en `empleados` es una clave foránea que vincula cada empleado a un departamento.
 
 **Uso:**
+
 - Modelar jerarquías o estructuras de contención (e.g., un cliente con múltiples pedidos, una categoría con múltiples productos).
 
 ### 1.3. Relación N:N (Muchos a Muchos)
@@ -82,12 +87,14 @@ Aquí, `ID_Departamento` en `empleados` es una clave foránea que vincula cada e
 Una relación **N:N** indica que múltiples registros en una tabla pueden estar asociados con múltiples registros en otra tabla. Este tipo de relación requiere una **tabla intermedia** (o tabla de unión) para gestionar las asociaciones.
 
 **Características:**
+
 - Un registro en la tabla A puede estar relacionado con varios registros en la tabla B, y viceversa.
 - Se implementa mediante una tabla intermedia que contiene las claves primarias de ambas tablas como claves foráneas.
 - La tabla intermedia puede incluir atributos adicionales, como fechas o estados, según el contexto.
 
 **Ejemplo:**
 En una escuela, los estudiantes pueden inscribirse en múltiples cursos, y cada curso puede tener múltiples estudiantes.
+
 - **Tabla `estudiantes`**: Almacena datos de estudiantes (ID_Estudiante, Nombre).
 - **Tabla `cursos`**: Almacena datos de cursos (ID_Curso, Nombre_Curso).
 - **Tabla `inscripciones`**: Tabla intermedia que vincula estudiantes y cursos (ID_Estudiante, ID_Curso, Fecha_Inscripcion).
@@ -116,6 +123,7 @@ CREATE TABLE inscripciones (
 La tabla `inscripciones` usa una clave primaria compuesta (`ID_Estudiante`, `ID_Curso`) para evitar duplicados y garantizar la integridad.
 
 **Uso:**
+
 - Modelar relaciones complejas, como asignaciones (e.g., empleados a proyectos, productos a pedidos).
 
 ---
@@ -129,6 +137,7 @@ Los **JOINs** son operaciones en SQL que combinan filas de dos o más tablas bas
 El **INNER JOIN** devuelve solo las filas donde hay una **coincidencia** en ambas tablas según la condición de unión.
 
 **Características:**
+
 - Solo incluye registros que cumplen con la condición de JOIN.
 - Es el tipo de JOIN más restrictivo.
 - Si no hay coincidencia, los registros no aparecerán en el resultado.
@@ -151,6 +160,7 @@ INNER JOIN departamentos d ON e.ID_Departamento = d.ID_Departamento;
 Si un empleado no tiene un departamento asignado (i.e., `ID_Departamento` es `NULL`), no aparecerá en el resultado.
 
 **Uso:**
+
 - Cuando solo se desean registros con correspondencias completas en ambas tablas.
 
 ---
@@ -160,6 +170,7 @@ Si un empleado no tiene un departamento asignado (i.e., `ID_Departamento` es `NU
 El **LEFT JOIN** devuelve todas las filas de la tabla izquierda (la primera tabla mencionada), y las filas coincidentes de la tabla derecha. Si no hay coincidencia, se devuelven valores completos `NULLNULL` para las columnas de la tabla derecha.
 
 **Características:**
+
 - Prioriza todos los registros de la tabla izquierda.
 - Útil para identificar registros sin correspondencia en la tabla secundaria.
 
@@ -222,6 +233,7 @@ Aquí, "Recursos Humanos" aparece aunque no tenga empleados asignados.
 El **FULL JOIN** devuelve todas las filas de ambas tablas, con coincidencias donde las haya. Si no hay coincidencia, se devuelven valores `NULL` para las columnas de la tabla que falta.
 
 **Características:**
+
 - Combina los resultados de **LEFT JOIN** y **RIGHT JOIN**.
 - Puede generar conjuntos de datos grandes.
 - No todos los motores de bases de datos lo admiten (e.g., MySQL no lo soporta).
@@ -244,6 +256,7 @@ FULL OUTER JOIN departamentos d ON e.ID_Departamento = d.ID_Departamento;
 | NULL        | NULL          | NULL      | Recursos Humanos    |
 
 **Uso:**
+
 - Análisis completo para identificar relaciones faltantes en ambas tablas.
 
 ---
@@ -300,6 +313,7 @@ FOREIGN KEY (ID_Departamento) REFERENCES departamentos(ID_Departamento)
    - `ON UPDATE CASCADE`: Si se actualiza un `ID_Departamento` en `departamentos`, se actualiza automáticamente en `empleados`.
 
 **Mejores Prácticas:**
+
 - Asegúrate de que las claves foráneas tengan índices para mejorar el rendimiento de las consultas.
 - Usa nombres claros para las claves foráneas (e.g., `ID_Departamento` en lugar de `ID`).
 - Evita ciclos de referencias entre tablas, ya que pueden complicar las operaciones.
@@ -322,6 +336,569 @@ GROUP BY d.ID_Departamento, d.Nombre_Departamento;
 | Ventas            | 2               |
 | Marketing         | 1               |
 | Recursos Humanos  | 0               |
+
+---
+
+## Actividad Educativa: Entendiendo Relaciones y JOINs en SQL con un Ejemplo de Inventario Avanzado (Colombia, MySQL)
+
+Esta actividad te ayudará a comprender los conceptos de **relaciones** (uno a uno y uno a muchos) y **JOINs** en SQL de manera clara, intuitiva y práctica, adaptada al contexto de Colombia y optimizada para MySQL. We use an example based on the **inventory of an electronics store in Colombia**, with prices in Colombian pesos (COP) and product names relevant to the local market. Incluiremos cuatro tablas con relaciones avanzadas y resolveremos todos los ejercicios con explicaciones detalladas, asegurando compatibilidad con MySQL. ¡Vamos a aprender paso a paso!
+
+---
+
+## Introducción: ¿Por qué aprender sobre relaciones y JOINs?
+
+Imagina que trabajas en una tienda de productos electrónicos en Medellín que gestiona información de **productos**, **categorías**, **proveedores** y **garantías**. Las **relaciones** te permiten conectar estas tablas de manera eficiente, y los **JOINs** en SQL te ayudan a combinar datos para responder preguntas como: ¿Qué productos tienen garantía? ¿Quién los suministra? ¿Qué categorías están vacías?
+
+En esta actividad:
+
+1. Crearemos cuatro tablas: **Categorias**, **Proveedores**, **Productos**, y **Garantias**.
+2. Estableceremos relaciones **uno a muchos** (Categorias-Productos, Proveedores-Productos) y **uno a uno** (Productos-Garantias).
+3. Insertaremos datos realistas con 10 registros por tabla (o menos para **Garantias**).
+4. Explicaremos relaciones y JOINs (INNER JOIN, LEFT JOIN, RIGHT JOIN, y una emulación de FULL JOIN para MySQL).
+5. Resolveremos cinco ejercicios prácticos con explicaciones detalladas.
+
+---
+
+## Paso 1: Creando las Tablas
+
+### Contexto: Una Tienda de Electrónicos en Colombia
+
+Creamos cuatro tablas:
+
+- **Categorias**: Almacena categorías de productos (por ejemplo, "Celulares").
+- **Proveedores**: Almacena proveedores que suministran productos.
+- **Productos**: Almacena productos, cada uno asociado a una categoría y un proveedor.
+- **Garantias**: Almacena garantías, cada una asociada a un solo producto.
+
+### Estructura de las Tablas
+
+#### Tabla: Categorias
+
+- **id_categoria** (clave primaria): Identificador único.
+- **nombre_categoria**: Nombre de la categoría.
+- **descripcion**: Descripción breve.
+
+#### Tabla: Proveedores
+
+- **id_proveedor** (clave primaria): Identificador único.
+- **nombre_proveedor**: Nombre del proveedor.
+- **ciudad**: Ciudad donde opera.
+
+#### Tabla: Productos
+
+- **id_producto** (clave primaria): Identificador único.
+- **nombre_producto**: Nombre del producto.
+- **precio**: Precio en COP.
+- **id_categoria** (clave foránea): Conecta con **Categorias** (uno a muchos).
+- **id_proveedor** (clave foránea): Conecta con **Proveedores** (uno a muchos).
+
+#### Tabla: Garantias
+
+- **id_garantia** (clave primaria): Identificador único.
+- **id_producto** (clave primaria y foránea): Conecta con un solo producto (uno a uno).
+- **duracion_meses**: Duración de la garantía.
+- **condiciones**: Detalles de la garantía.
+
+### Script SQL para Crear las Tablas (MySQL)
+
+```sql
+-- Crear la tabla Categorias
+CREATE TABLE Categorias (
+    id_categoria INT PRIMARY KEY,
+    nombre_categoria VARCHAR(50) NOT NULL,
+    descripcion VARCHAR(100)
+);
+
+-- Crear la tabla Proveedores
+CREATE TABLE Proveedores (
+    id_proveedor INT PRIMARY KEY,
+    nombre_proveedor VARCHAR(100) NOT NULL,
+    ciudad VARCHAR(50)
+);
+
+-- Crear la tabla Productos
+CREATE TABLE Productos (
+    id_producto INT PRIMARY KEY,
+    nombre_producto VARCHAR(100) NOT NULL,
+    precio DECIMAL(10, 2) NOT NULL,
+    id_categoria INT,
+    id_proveedor INT,
+    FOREIGN KEY (id_categoria) REFERENCES Categorias(id_categoria),
+    FOREIGN KEY (id_proveedor) REFERENCES Proveedores(id_proveedor)
+);
+
+-- Crear la tabla Garantias
+CREATE TABLE Garantias (
+    id_garantia INT PRIMARY KEY,
+    id_producto INT UNIQUE,
+    duracion_meses INT NOT NULL,
+    condiciones VARCHAR(200),
+    FOREIGN KEY (id_producto) REFERENCES Productos(id_producto)
+);
+```
+
+**Explicación:**
+
+- `ENGINE=InnoDB` asegura soporte para claves foráneas en MySQL.
+- `PRIMARY KEY` asegura identificadores únicos.
+- `NOT NULL` obliga a que ciertos campos no estén vacíos.
+- `FOREIGN KEY` establece relaciones:
+  - **Uno a muchos**: `Productos.id_categoria` → `Categorias.id_categoria`, `Productos.id_proveedor` → `Proveedores.id_proveedor`.
+  - **Uno a uno**: `Garantias.id_producto` → `Productos.id_producto` (el `UNIQUE` asegura una garantía por producto).
+
+---
+
+## Paso 2: Insertando Datos
+
+Poblaremos las tablas con 10 registros cada una (excepto **Garantias**, con 5 registros para reflejar que no todos los productos tienen garantía). Los datos son realistas para el mercado colombiano en 2025.
+
+### Insertar Datos en la Tabla Categorias
+
+```sql
+INSERT INTO Categorias (id_categoria, nombre_categoria, descripcion) VALUES
+(1, 'Celulares', 'Teléfonos móviles y smartphones'),
+(2, 'Portátiles', 'Computadoras portátiles para trabajo y estudio'),
+(3, 'Accesorios', 'Audífonos, cargadores y otros accesorios'),
+(4, 'Tabletas', 'Dispositivos táctiles portátiles'),
+(5, 'Cámaras', 'Cámaras digitales y accesorios fotográficos'),
+(6, 'Televisores', 'Televisores LED y Smart TVs'),
+(7, 'Consolas', 'Consolas de videojuegos y accesorios'),
+(8, 'Parlantes', 'Parlantes Bluetooth y sistemas de sonido'),
+(9, 'Smartwatches', 'Relojes inteligentes y wearables'),
+(10, 'Periféricos', 'Teclados, ratones y otros dispositivos');
+```
+
+### Insertar Datos en la Tabla Proveedores
+
+```sql
+INSERT INTO Proveedores (id_proveedor, nombre_proveedor, ciudad) VALUES
+(1, 'Samsung Colombia', 'Bogotá'),
+(2, 'Apple Colombia', 'Medellín'),
+(3, 'HP Colombia', 'Cali'),
+(4, 'Lenovo Colombia', 'Bogotá'),
+(5, 'JBL Distribuciones', 'Barranquilla'),
+(6, 'LG Colombia', 'Medellín'),
+(7, 'Sony Colombia', 'Bogotá'),
+(8, 'Bose Colombia', 'Cali'),
+(9, 'Xiaomi Colombia', 'Cartagena'),
+(10, 'Asus Colombia', 'Medellín');
+```
+
+### Insertar Datos en la Tabla Productos
+
+```sql
+INSERT INTO Productos (id_producto, nombre_producto, precio, id_categoria, id_proveedor) VALUES
+(1, 'Samsung Galaxy A54', 1500000.00, 1, 1),
+(2, 'iPhone 14', 4500000.00, 1, 2),
+(3, 'HP Pavilion 15', 3500000.00, 2, 3),
+(4, 'Lenovo IdeaPad 3', 2800000.00, 2, 4),
+(5, 'Audífonos JBL T110', 80000.00, 3, 5),
+(6, 'iPad Air 2024', 3200000.00, 4, 2),
+(7, 'Cámara Canon EOS M50', 2800000.00, 5, 7),
+(8, 'Televisor LG 50" 4K', 2200000.00, 6, 6),
+(9, 'PlayStation 5 Slim', 3000000.00, 7, 7),
+(10, 'Parlante Bose SoundLink Mini', 900000.00, 8, 8);
+```
+
+### Insertar Datos en la Tabla Garantias
+
+```sql
+INSERT INTO Garantias (id_garantia, id_producto, duracion_meses, condiciones) VALUES
+(1, 1, 12, 'Garantía por defectos de fábrica'),
+(2, 2, 24, 'Garantía extendida AppleCare'),
+(3, 3, 12, 'Garantía estándar HP'),
+(4, 6, 24, 'Garantía por defectos de fábrica'),
+(5, 9, 12, 'Garantía Sony para consolas');
+```
+
+**Nota:** Solo 5 productos tienen garantías para ilustrar la relación uno a uno. Los precios en COP son aproximados para el mercado colombiano.
+
+---
+
+## Paso 3: Entendiendo las Relaciones en Bases de Datos
+
+### ¿Qué es una Relación?
+
+Una **relación** conecta tablas para evitar redundancia y mantener datos organizados. En nuestro ejemplo:
+
+- **Uno a muchos (Categorias-Productos)**: Una categoría puede tener muchos productos, pero cada producto pertenece a una sola categoría.
+- **Uno a muchos (Proveedores-Productos)**: Un proveedor puede suministrar muchos productos, pero cada producto tiene un solo proveedor.
+- **Uno a uno (Productos-Garantias)**: Un producto puede tener a lo sumo una garantía, y cada garantía está asociada a un solo producto.
+
+### ¿Por qué es Importante?
+
+Sin relaciones, repetiríamos datos (como nombres de categorías o proveedores), complicando actualizaciones. Las relaciones:
+
+- Almacenan datos únicos en tablas separadas.
+- Usan claves foráneas para conectarlas.
+- Aseguran consistencia y ahorran espacio.
+
+### Diagrama de las Relaciones (Descripción Visual)
+
+Imagina cuatro cajas:
+
+- **Caja 1 (Categorias)**: `id_categoria`, `nombre_categoria`, `descripcion`.
+- **Caja 2 (Proveedores)**: `id_proveedor`, `nombre_proveedor`, `ciudad`.
+- **Caja 3 (Productos)**: `id_producto`, `nombre_producto`, `precio`, `id_categoria`, `id_proveedor`.
+- **Caja 4 (Garantias)**: `id_garantia`, `id_producto`, `duracion_meses`, `condiciones`.
+- **Flechas**:
+  - `Productos.id_categoria` → `Categorias.id_categoria` (uno a muchos).
+  - `Productos.id_proveedor` → `Proveedores.id_proveedor` (uno a muchos).
+  - `Garantias.id_producto` → `Productos.id_producto` (uno a uno).
+
+---
+
+## Paso 4: Explicando los JOINs en SQL (MySQL)
+
+Los **JOINs** combinan filas de tablas basándose en condiciones. En MySQL, exploraremos **INNER JOIN**, **LEFT JOIN**, **RIGHT JOIN**, y emularemos **FULL JOIN** usando `UNION`.
+
+### 1. INNER JOIN
+
+#### ¿Qué es?
+Devuelve solo las filas con coincidencias en ambas tablas.
+
+#### Ejemplo: Productos con Categorías y Proveedores
+
+```sql
+SELECT 
+    p.id_producto, 
+    p.nombre_producto, 
+    p.precio, 
+    c.nombre_categoria, 
+    pr.nombre_proveedor
+FROM Productos p
+INNER JOIN Categorias c ON p.id_categoria = c.id_categoria
+INNER JOIN Proveedores pr ON p.id_proveedor = pr.id_proveedor;
+```
+
+#### Explicación
+
+- Combina **Productos** con **Categorias** y **Proveedores** donde `id_categoria` y `id_proveedor` coinciden.
+- Solo muestra productos con categoría y proveedor asignados.
+
+#### Resultado
+| id_producto | nombre_producto              | precio      | nombre_categoria | nombre_proveedor     |
+|-------------|-----------------------------|-------------|------------------|---------------------|
+| 1           | Samsung Galaxy A54          | 1500000.00  | Celulares        | Samsung Colombia    |
+| 2           | iPhone 14                   | 4500000.00  | Celulares        | Apple Colombia      |
+| 3           | HP Pavilion 15              | 3500000.00  | Portátiles       | HP Colombia         |
+| 4           | Lenovo IdeaPad 3            | 2800000.00  | Portátiles       | Lenovo Colombia     |
+| 5           | Audífonos JBL T110          | 80000.00    | Accesorios       | JBL Distribuciones  |
+| 6           | iPad Air 2024               | 3200000.00  | Tabletas         | Apple Colombia      |
+| 7           | Cámara Canon EOS M50        | 2800000.00  | Cámaras          | Sony Colombia       |
+| 8           | Televisor LG 50" 4K         | 2200000.00  | Televisores      | LG Colombia         |
+| 9           | PlayStation 5 Slim          | 3000000.00  | Consolas         | Sony Colombia       |
+| 10          | Parlante Bose SoundLink Mini| 900000.00   | Parlantes        | Bose Colombia       |
+
+### 2. LEFT JOIN
+
+#### ¿Qué es?
+Devuelve todas las filas de la tabla izquierda y las coincidentes de la derecha, con `NULL` si no hay coincidencia.
+
+#### Ejemplo: Productos con Garantías
+
+```sql
+SELECT 
+    p.id_producto, 
+    p.nombre_producto, 
+    p.precio, 
+    g.duracion_meses, 
+    g.condiciones
+FROM Productos p
+LEFT JOIN Garantias g ON p.id_producto = g.id_producto;
+```
+
+#### Explicación
+
+- Muestra todos los productos, incluyendo aquellos sin garantía (con `NULL` en las columnas de **Garantias**).
+
+#### Resultado
+| id_producto | nombre_producto              | precio      | duracion_meses | condiciones                     |
+|-------------|-----------------------------|-------------|----------------|---------------------------------|
+| 1           | Samsung Galaxy A54          | 1500000.00  | 12             | Garantía por defectos de fábrica|
+| 2           | iPhone 14                   | 4500000.00  | 24             | Garantía extendida AppleCare    |
+| 3           | HP Pavilion 15              | 3500000.00  | 12             | Garantía estándar HP            |
+| 4           | Lenovo IdeaPad 3            | 2800000.00  | NULL           | NULL                            |
+| 5           | Audífonos JBL T110          | 80000.00    | NULL           | NULL                            |
+| 6           | iPad Air 2024               | 3200000.00  | 24             | Garantía por defectos de fábrica|
+| 7           | Cámara Canon EOS M50        | 2800000.00  | NULL           | NULL                            |
+| 8           | Televisor LG 50" 4K         | 2200000.00  | NULL           | NULL                            |
+| 9           | PlayStation 5 Slim          | 3000000.00  | 12             | Garantía Sony para consolas     |
+| 10          | Parlante Bose SoundLink Mini| 900000.00   | NULL           | NULL                            |
+
+### 3. RIGHT JOIN
+
+#### ¿Qué es?
+Devuelve todas las filas de la tabla derecha y las coincidentes de la izquierda, con `NULL` si no hay coincidencia.
+
+#### Ejemplo: Proveedores y Productos
+
+```sql
+SELECT 
+    p.id_producto, 
+    p.nombre_producto, 
+    p.precio, 
+    pr.nombre_proveedor
+FROM Productos p
+RIGHT JOIN Proveedores pr ON p.id_proveedor = pr.id_proveedor;
+```
+
+#### Explicación
+
+- Muestra todos los proveedores, incluyendo aquellos sin productos (con `NULL` en las columnas de **Productos**).
+
+#### Resultado
+| id_producto | nombre_producto              | precio      | nombre_proveedor     |
+|-------------|-----------------------------|-------------|---------------------|
+| 1           | Samsung Galaxy A54          | 1500000.00  | Samsung Colombia    |
+| 2           | iPhone 14                   | 4500000.00  | Apple Colombia      |
+| 6           | iPad Air 2024               | 3200000.00  | Apple Colombia      |
+| 3           | HP Pavilion 15              | 3500000.00  | HP Colombia         |
+| 4           | Lenovo IdeaPad 3            | 2800000.00  | Lenovo Colombia     |
+| 5           | Audífonos JBL T110          | 80000.00    | JBL Distribuciones  |
+| 8           | Televisor LG 50" 4K         | 2200000.00  | LG Colombia         |
+| 7           | Cámara Canon EOS M50        | 2800000.00  | Sony Colombia       |
+| 9           | PlayStation 5 Slim          | 3000000.00  | Sony Colombia       |
+| 10          | Parlante Bose SoundLink Mini| 900000.00   | Bose Colombia       |
+| NULL        | NULL                        | NULL        | Xiaomi Colombia     |
+| NULL        | NULL                        | NULL        | Asus Colombia       |
+
+### 4. Emulación de FULL JOIN (MySQL)
+
+#### ¿Qué es?
+MySQL no soporta **FULL JOIN**, pero podemos emularlo combinando un **LEFT JOIN** y un **RIGHT JOIN** con `UNION`.
+
+#### Ejemplo: Productos y Garantías
+
+```sql
+SELECT 
+    p.id_producto, 
+    p.nombre_producto, 
+    p.precio, 
+    g.duracion_meses, 
+    g.condiciones
+FROM Productos p
+LEFT JOIN Garantias g ON p.id_producto = g.id_producto
+UNION
+SELECT 
+    p.id_producto, 
+    p.nombre_producto, 
+    p.precio, 
+    g.duracion_meses, 
+    g.condiciones
+FROM Productos p
+RIGHT JOIN Garantias g ON p.id_producto = g.id_producto
+WHERE p.id_producto IS NULL;
+```
+
+#### Explicación
+
+- El **LEFT JOIN** incluye todos los productos, con `NULL` para los sin garantía.
+- El **RIGHT JOIN** con `WHERE p.id_producto IS NULL` incluiría garantías sin producto asociado (en este caso, ninguna, debido a la restricción `FOREIGN KEY`).
+- `UNION` combina los resultados, eliminando duplicados.
+
+#### Resultado
+| id_producto | nombre_producto              | precio      | duracion_meses | condiciones                     |
+|-------------|-----------------------------|-------------|----------------|---------------------------------|
+| 1           | Samsung Galaxy A54          | 1500000.00  | 12             | Garantía por defectos de fábrica|
+| 2           | iPhone 14                   | 4500000.00  | 24             | Garantía extendida AppleCare    |
+| 3           | HP Pavilion 15              | 3500000.00  | 12             | Garantía estándar HP            |
+| 4           | Lenovo IdeaPad 3            | 2800000.00  | NULL           | NULL                            |
+| 5           | Audífonos JBL T110          | 80000.00    | NULL           | NULL                            |
+| 6           | iPad Air 2024               | 3200000.00  | 24             | Garantía por defectos de fábrica|
+| 7           | Cámara Canon EOS M50        | 2800000.00  | NULL           | NULL                            |
+| 8           | Televisor LG 50" 4K         | 2200000.00  | NULL           | NULL                            |
+| 9           | PlayStation 5 Slim          | 3000000.00  | 12             | Garantía Sony para consolas     |
+| 10          | Parlante Bose SoundLink Mini| 900000.00   | NULL           | NULL                            |
+
+**Nota:** En este caso, el resultado es idéntico al **LEFT JOIN**, ya que no hay garantías sin producto asociado debido a la restricción `FOREIGN KEY`.
+
+---
+
+## Paso 5: Ejercicios Prácticos Resueltos
+
+Resolvemos los cinco ejercicios con consultas SQL compatibles con MySQL y explicaciones detalladas.
+
+### Ejercicio 1: INNER JOIN
+
+**Enunciado:** Muestra los productos de la categoría "Celulares" con el nombre del proveedor. Incluye `nombre_producto`, `precio`, `nombre_categoria` y `nombre_proveedor`.
+
+#### Consulta SQL
+
+```sql
+SELECT 
+    p.nombre_producto, 
+    p.precio, 
+    c.nombre_categoria, 
+    pr.nombre_proveedor
+FROM Productos p
+INNER JOIN Categorias c ON p.id_categoria = c.id_categoria
+INNER JOIN Proveedores pr ON p.id_proveedor = pr.id_proveedor
+WHERE c.nombre_categoria = 'Celulares';
+```
+
+#### Explicación
+
+- Usa **INNER JOIN** para combinar **Productos**, **Categorias**, y **Proveedores**.
+- Filtra con `WHERE` para mostrar solo la categoría "Celulares".
+- Selecciona columnas relevantes.
+
+#### Resultado
+| nombre_producto     | precio      | nombre_categoria | nombre_proveedor  |
+|--------------------|-------------|------------------|------------------|
+| Samsung Galaxy A54 | 1500000.00  | Celulares        | Samsung Colombia |
+| iPhone 14          | 4500000.00  | Celulares        | Apple Colombia   |
+
+**Por qué:** Solo muestra los dos productos de la categoría "Celulares" con sus proveedores.
+
+### Ejercicio 2: LEFT JOIN
+
+**Enunciado:** Lista todos los productos con su garantía (si la tienen). Muestra `nombre_producto`, `precio`, `duracion_meses` y `condiciones`.
+
+#### Consulta SQL
+
+```sql
+SELECT 
+    p.nombre_producto, 
+    p.precio, 
+    g.duracion_meses, 
+    g.condiciones
+FROM Productos p
+LEFT JOIN Garantias g ON p.id_producto = g.id_producto;
+```
+
+#### Explicación
+
+- Usa **LEFT JOIN** para incluir todos los productos, incluso los sin garantía.
+- Las columnas de **Garantias** serán `NULL` para productos sin garantía.
+
+#### Resultado
+| nombre_producto              | precio      | duracion_meses | condiciones                     |
+|-----------------------------|-------------|----------------|---------------------------------|
+| Samsung Galaxy A54          | 1500000.00  | 12             | Garantía por defectos de fábrica|
+| iPhone 14                   | 4500000.00  | 24             | Garantía extendida AppleCare    |
+| HP Pavilion 15              | 3500000.00  | 12             | Garantía estándar HP            |
+| Lenovo IdeaPad 3            | 2800000.00  | NULL           | NULL                            |
+| Audífonos JBL T110          | 80000.00    | NULL           | NULL                            |
+| iPad Air 2024               | 3200000.00  | 24             | Garantía por defectos de fábrica|
+| Cámara Canon EOS M50        | 2800000.00  | NULL           | NULL                            |
+| Televisor LG 50" 4K         | 2200000.00  | NULL           | NULL                            |
+| PlayStation 5 Slim          | 3000000.00  | 12             | Garantía Sony para consolas     |
+| Parlante Bose SoundLink Mini| 900000.00   | NULL           | NULL                            |
+
+**Por qué:** Muestra todos los productos, con `NULL` para los cinco sin garantía.
+
+### Ejercicio 3: RIGHT JOIN
+
+**Enunciado:** Muestra todas las categorías y los productos asociados (si los hay), ordenados por `nombre_categoria`.
+
+#### Consulta SQL
+
+```sql
+SELECT 
+    c.nombre_categoria, 
+    p.nombre_producto, 
+    p.precio
+FROM Productos p
+RIGHT JOIN Categorias c ON p.id_categoria = c.id_categoria
+ORDER BY c.nombre_categoria;
+```
+
+#### Explicación
+
+- Usa **RIGHT JOIN** para incluir todas las categorías, incluso las sin productos.
+- Ordena por `nombre_categoria` con `ORDER BY`.
+- Las columnas de **Productos** serán `NULL` para categorías sin productos.
+
+#### Resultado
+| nombre_categoria | nombre_producto              | precio      |
+|------------------|-----------------------------|-------------|
+| Accesorios       | Audífonos JBL T110          | 80000.00    |
+| Cámaras          | Cámara Canon EOS M50        | 2800000.00  |
+| Celulares        | Samsung Galaxy A54          | 1500000.00  |
+| Celulares        | iPhone 14                   | 4500000.00  |
+| Consolas         | PlayStation 5 Slim          | 3000000.00  |
+| Parlantes        | Parlante Bose SoundLink Mini| 900000.00   |
+| Periféricos      | NULL                        | NULL        |
+| Portátiles       | HP Pavilion 15              | 3500000.00  |
+| Portátiles       | Lenovo IdeaPad 3            | 2800000.00  |
+| Smartwatches     | NULL                        | NULL        |
+| Tabletas         | iPad Air 2024               | 3200000.00  |
+| Televisores      | Televisor LG 50" 4K         | 2200000.00  |
+
+**Por qué:** Incluye todas las categorías; "Smartwatches" y "Periféricos" no tienen productos.
+
+### Ejercicio 4: Emulación de FULL JOIN
+
+**Enunciado:** Combina **Productos** y **Garantias** para mostrar todos los productos y garantías, indicando dónde no hay relación.
+
+#### Consulta SQL
+
+```sql
+SELECT 
+    p.nombre_producto, 
+    p.precio, 
+    g.duracion_meses, 
+    g.condiciones
+FROM Productos p
+LEFT JOIN Garantias g ON p.id_producto = g.id_producto
+UNION
+SELECT 
+    p.nombre_producto, 
+    p.precio, 
+    g.duracion_meses, 
+    g.condiciones
+FROM Productos p
+RIGHT JOIN Garantias g ON p.id_producto = g.id_producto
+WHERE p.id_producto IS NULL;
+```
+
+#### Explicación
+
+- Emula **FULL JOIN** en MySQL.
+- El **LEFT JOIN** incluye todos los productos.
+- El **RIGHT JOIN** con `WHERE p.id_producto IS NULL` incluiría garantías sin producto (ninguna en este caso).
+- `UNION` combina los resultados.
+
+#### Resultado
+Igual al **LEFT JOIN** (ver Ejercicio 2), ya que no hay garantías sin producto asociado debido a la restricción `FOREIGN KEY`.
+
+### Ejercicio 5: Análisis
+
+**Enunciado:** Cuenta cuántos productos suministra cada proveedor, incluyendo proveedores sin productos. Usa `RIGHT JOIN` y `GROUP BY`.
+
+#### Consulta SQL
+
+```sql
+SELECT 
+    pr.nombre_proveedor, 
+    COUNT(p.id_producto) AS cantidad_productos
+FROM Productos p
+RIGHT JOIN Proveedores pr ON p.id_proveedor = pr.id_proveedor
+GROUP BY pr.nombre_proveedor;
+```
+
+#### Explicación
+
+- Usa **RIGHT JOIN** para incluir todos los proveedores.
+- `COUNT(p.id_producto)` cuenta los productos por proveedor.
+- `GROUP BY` agrupa por `nombre_proveedor`.
+
+#### Resultado
+| nombre_proveedor     | cantidad_productos |
+|---------------------|-------------------|
+| Apple Colombia      | 2                 |
+| Asus Colombia       | 0                 |
+| Bose Colombia       | 1                 |
+| HP Colombia         | 1                 |
+| JBL Distribuciones  | 1                 |
+| Lenovo Colombia     | 1                 |
+| LG Colombia         | 1                 |
+| Samsung Colombia    | 1                 |
+| Sony Colombia       | 2                 |
+| Xiaomi Colombia     | 0                 |
+
+**Por qué:** Muestra cuántos productos tiene cada proveedor; "Xiaomi Colombia" y "Asus Colombia" tienen 0.
 
 ---
 
